<resources>
    <string name="app_name" translatable="false">Health Diary</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>

    <string name="label_date">Date:</string>

    <string name="confirm_title">Are you sure?</string>
    <string name="confirm_message">This will permanently delete the entry</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <string name="entry_added">Entry added successfully</string>
    <string name="entry_not_added">Entry was not added due to an error</string>
    <string name="entry_updated">Entry updated</string>
    <string name="entry_not_updated">Entry was not updated due to an error</string>

    <string name="invalid_query_uri" translatable="false">Invalid query Uri: </string>
    <string name="invalid_insert_uri" translatable="false">Invalid insert Uri: </string>
    <string name="invalid_update_uri" translatable="false">Invalid update Uri: </string>
    <string name="invalid_delete_uri" translatable="false">Invalid delete Uri: </string>

    <string name="insert_failed">Insert failed:</string>

    <string name="hint_date">Date</string>
    <string name="hint_weight2">Weight</string>
    <string name="hint_height">Height</string>
    <string name="hint_pressure">Pressure</string>
    <string name="hint_pulse">Pulse</string>
    <string name="hint_sugar">Sugar</string>
    <string name="hint_cholesterol">Cholesterol</string>

    <string name="label_weight">Weight</string>
    <string name="label_height">Height</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_pulse">Pulse</string>
    <string name="label_sugar">Sugar</string>
    <string name="label_cholesterol">Cholesterol</string>
    <string name="text_summary">Summary</string>
    <string name="text_BMI2">BMI:</string>
    <string name="text_pressureIndicators">Pressure Indicators:</string>
    <string name="text_pulsIndicators">Pulse Indicators:</string>
    <string name="text_sugarIndicators">Sugar Indicators:</string>
    <string name="text_cholesterolndicators">Cholesterol Indicators:</string>
    <string name="text_Info">Additional Information</string>
    <string name="text_checkList">Check List</string>

</resources>